--- a/resources/sass/layout/_headers.scss
+++ b/resources/sass/layout/_headers.scss
@@ -14,9 +14,9 @@
   align-items: center;
 }
 
-.header .navbar-nav .nav-item .dropdown-menu {
-  top: 78px;
-}
+// .header .navbar-nav .nav-item .dropdown-menu {
+//   top: 78px;
+// }
 
 .navbar-nav .dropdown-menu .dropdown-item {
   color: $colour-dark;
